# cogitatio-virtualis

./: .gitignore  LICENSE  README.md
cogitatio-server/: .env.example  README.md  cogitatio.service  conda_env.yml  file-structure.md  pyproject.toml  requirements.txt
cogitatio-server/cogitatio/api/: routes.py  types.py
cogitatio-server/cogitatio/document_processor/: config.py  document_store.py  main.py  monitor.py  processor.py  vector_manager.py
cogitatio-server/cogitatio/tests/: test_split_sections.py
cogitatio-server/cogitatio/types/: schemas.py
cogitatio-server/cogitatio/utils/: .env.example  __init__.py  logging.py
cogitatio-server/data/: .gitignore
cogitatio-server/documents/templates/: education.md  experience.md  other-cover-letter.md  other-publication-speaking.md  other-recommendation-letter.md  other-self-referential.md  other-thought-leadership.md  project.md
cogitatio-server/scripts/: start_server.py
cogitatio-server/scripts/db-tools/: db_explorer.py  vector_ascii.py  vector_visualizer.py
cogitatio-terminal/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  prettier.json  server.ts.old  tsconfig.json
cogitatio-terminal/pages/: _app.tsx  _document.tsx  index.tsx
cogitatio-terminal/styles/: globals.css
cogitatio-terminal/types/: chat.ts  documents.ts  terminal.ts
cogitation-terminal/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
virtualis-terminal/: .env.example  .gitignore  README.md  package-lock.json  package.json  resolve-test.js
(+91 files in other folders)
